--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="box-activities">
 
             <div class="container wrap-activities p-0">
-                <div class="activities-app ">
+                <div class="activities-app">
                     <div class="activities-slider-first">
                         <div id="carouselactivities" class="carousel slide carousel-fade" data-ride="carousel">
 
@@ -321,7 +321,10 @@
                                                 <div class="row">
                                                     <div class="col-12">
                                                         <div class="image-app">
-                                                            <img src="assets/img/system4.png" alt="">
+                                                            <div class="side-image-app">
+                                                                <img src="assets/img/motahari-chehre.png" alt="">
+                                                            </div>
+
                                                         </div>
 
                                                     </div>
@@ -339,10 +342,10 @@
 
                                                         </p>
                                                         <div class="activities-buttons">
-                                                            <button class="activities-btn" id="property_btn" data-name="motahari">
+                                                            <button class="activities-btn property_btn" data-name="motahari">
                                                                 ویژگی ها
                                                             </button>
-                                                            <button class="activities-btn" id="gallery_btn" data-name="motahari">
+                                                            <button class="activities-btn gallery_btn" data-name="motahari">
                                                                 گالری
                                                             </button>
                                                         </div>
@@ -367,7 +370,9 @@
                                                 <div class="row">
                                                     <div class="col-12">
                                                         <div class="image-app">
+                                                            <div class="side-image-app">
                                                             <img src="assets/img/system4.png" alt="">
+                                                            </div>
                                                         </div>
 
                                                     </div>
@@ -409,7 +414,9 @@
                                                 <div class="row">
                                                     <div class="col-12">
                                                         <div class="image-app">
+                                                            <div class="side-image-app">
                                                             <img src="assets/img/system4.png" alt="">
+                                                            </div>
                                                         </div>
 
                                                     </div>
@@ -450,54 +457,29 @@
                     </div>
                 </div>
                 <div class="activities-property activities-property-motahari hidden">
-                    <div class="head-property ">
-                        <div class="image-property">
-                            <img src="assets/img/system4.png" alt="">
+                    <div class="row d-flex justify-content-center align-items-center">
+                        <div class="col-6">
+                            <div class="head-property ">
+                                <div class="image-property">
+                                    <div class="side-image-property">
+                                        <img src="assets/img/motahari-chehre.png" alt="">
+                                </div>
+
+                                </div>
+                                <h5 class="title">اپلیکیشن استاد مطهری</h5>
+                                <small class="installation">با ۲۰,۰۰۰ نصب فعال</small>
+                            </div>
+                                <div class="image-body-property">
+                                    <img src="assets/img/system4.png" alt="">
+                                </div>
                         </div>
-                        <h5 class="title">اپلیکیشن استاد مطهری</h5>
-                        <small class="installation">با ۲۰,۰۰۰ نصب فعال</small>
-                    </div>
-                    <div class="row d-flex align-items-center justify-content-center" style="width: 100%">
-                        <div class="col-12 col-md-4 ">
+                        <div class="col-6">
                             <div class="box-pack-property box-pack-property1">
-                            <div class="pack-property">
-
-                                <div class="text-property pl-2">
-                                    <h6 class="title">کتاب های رایگان</h6>
-                                    <p class="explain">شما می توانید تمامی کتاب های استاد مطهری
-                                        را به صورت تمام متن و رایگان دانلود کنید.</p>
-                                </div>
-                                    <div class="icon-body-property">
-                                        <img src="assets/img/system4.png" alt="" style="width: 100%">
-                                    </div>
-                            </div>
-                                <div class="pack-property">
-
-                                    <div class="text-property pl-2">
-                                        <h6 class="title">دوره های آموزشی</h6>
-                                        <p class="explain">شما می توانید از دوره های آموزش الکترونیکی
-                                            آثار شهید مطهری استفاده کنید.
-                                        </p>
-                                    </div>
-                                        <div class="icon-body-property">
-                                            <img src="assets/img/system4.png" alt="" style="width: 100%">
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-md-4 ">
-                            <div class="image-body-property">
-                                <img src="assets/img/system4.png" alt="">
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4 ">
-                            <div class="box-pack-property box-pack-property2 ">
                                 <div class="pack-property">
                                     <div class="icon-body-property">
-                                        <img src="assets/img/system4.png" alt="" style="width: 100%">
+                                        <img src="assets/img/system4.png" alt="">
                                     </div>
-                                    <div class="text-property pr-2">
+                                    <div class="text-property">
                                         <h6 class="title">کتاب های رایگان</h6>
                                         <p class="explain">شما می توانید تمامی کتاب های استاد مطهری
                                             را به صورت تمام متن و رایگان دانلود کنید.</p>
@@ -506,9 +488,32 @@
                                 </div>
                                 <div class="pack-property">
                                     <div class="icon-body-property">
-                                        <img src="assets/img/system4.png" alt="" style="width: 100%">
+                                        <img src="assets/img/system4.png" alt="">
                                     </div>
-                                    <div class="text-property pr-2">
+                                    <div class="text-property">
+                                        <h6 class="title">دوره های آموزشی</h6>
+                                        <p class="explain">شما می توانید از دوره های آموزش الکترونیکی
+                                            آثار شهید مطهری استفاده کنید.
+                                        </p>
+                                    </div>
+
+                                </div>
+                                <div class="pack-property">
+                                    <div class="icon-body-property">
+                                        <img src="assets/img/system4.png" alt="">
+                                    </div>
+                                    <div class="text-property">
+                                        <h6 class="title">کتاب های رایگان</h6>
+                                        <p class="explain">شما می توانید تمامی کتاب های استاد مطهری
+                                            را به صورت تمام متن و رایگان دانلود کنید.</p>
+                                    </div>
+
+                                </div>
+                                <div class="pack-property">
+                                    <div class="icon-body-property">
+                                        <img src="assets/img/system4.png" alt="">
+                                    </div>
+                                    <div class="text-property">
                                         <h6 class="title">دوره های آموزشی</h6>
                                         <p class="explain">شما می توانید از دوره های آموزش الکترونیکی
                                             آثار شهید مطهری استفاده کنید.
@@ -519,47 +524,82 @@
                             </div>
                         </div>
                     </div>
+
+
                     <div class="wrap-back-button">
-                        <button class="back-button" id="back_button">x</button>
+                        <button class="back-button">x</button>
                     </div>
                 </div>
-                <div class="activities-gallery-motahari"></div>
-                <div class="background-activities">
-                    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
-                         xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2111.48 1102.98">
-                        <defs>
-                            <style>.cls-1 {
-                                fill: none;
-                                stroke: #e2e2e2;
-                                stroke-width: 3px;
-                            }
+                <div class="activities-gallery activities-gallery-motahari hidden">
+                    <div class="head-gallery">
+                        <div class="image-gallery">
+                            <div class="side-image-gallery">
+                                <img src="assets/img/motahari-chehre.png" alt="">
+                            </div>
 
-                            .cls-2 {
-                                stroke: #c6c6c6;
-                                stroke-miterlimit: 10;
-                                stroke-width: 2px;
-                                fill: url(#linear-gradient);
-                            }</style>
-                            <linearGradient id="linear-gradient" x1="1982.91" y1="318.22" x2="574.25" y2="1726.88"
-                                            gradientTransform="translate(-19.08 24.32) rotate(-1.08)"
-                                            gradientUnits="userSpaceOnUse">
-                                <stop offset="0" stop-color="#404d8c"/>
-                                <stop offset="1" stop-color="#191e48"/>
-                            </linearGradient>
-                        </defs>
-                        <title>shape_4</title>
-                        <rect class="cls-1" x="260.13" y="507.97" width="2064.09" height="983.37" rx="119.18"
-                              ry="119.18" transform="translate(-298.43 -362.43) rotate(-3.71)"/>
-                        <rect class="cls-2" x="302.5" y="511.55" width="1952.17" height="1022" rx="118.16" ry="118.16"
-                              transform="translate(-216.9 -472.12) rotate(1.08)"/>
-                    </svg>
+                        </div>
+                        <h5 class="title">اپلیکیشن استاد مطهری</h5>
+                    </div>
+                            <div class="owl-carousel owl-theme owl-rtl">
+
+                                <div class="item">
+                                 <div class="owl-image">
+                                     <img src="assets/img/system4.png" alt="">
+                                 </div>
+                                    <div class="owl-box-text">
+                                        <p class="owl-text">
+                                            مسابقات
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="item ">
+                                    <div class="owl-image">
+                                        <img src="assets/img/system4.png" alt="">
+                                    </div>
+                                    <div class="owl-box-text">
+                                        <p class="owl-text">
+                                            کتاب ها
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="item ">
+                                    <div class="owl-image">
+                                        <img src="assets/img/system4.png" alt="">
+                                    </div>
+                                    <div class="owl-box-text">
+                                        <p class="owl-text">
+                                            دوره ها
+                                        </p>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                    <div class="wrap-back-button">
+                        <button class="back-button">x</button>
+                    </div>
                 </div>
+                <div class="background-activities" >
+                </div>
+                <div class="background-border-activities" ></div>
+
+            </div>
+            <div class="activities-Square">
+            </div>
+            <div class="activities-Square2">
+            </div>
+            <div class="octagonWrap">
+                <div class="octagon"></div>
+            </div>
+            <div class="octagonWrap2">
+                <div class="octagon2"></div>
             </div>
         </div>
     </section>
     <section class="vertical-scrolling">
         <div class="box-slider">
-            <div class="wrap-slider">
+            <div class="container wrap-slider">
                 <div id="demo" class="carousel slide" data-ride="carousel">
                     <ul class="carousel-indicators">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -567,25 +607,40 @@
                         <li data-target="#demo" data-slide-to="2"></li>
                     </ul>
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
+                        <div class="carousel-item active" >
+                            <div class="slider-image">
+                                <div class="side-slider-image">
+                                    <img src="assets/img/slider-computer.jpg" alt="Los Angeles">
+                                </div>
+
+                            </div>
+
                             <div class="carousel-caption">
-                                <h3>Los Angeles</h3>
-                                <p>We had such a great time in LA!</p>
+                                <p>مجوز نظام صنفی رایانه ای</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
+                            <div class="slider-image">
+                                <div class="side-slider-image">
+                                    <img src="assets/img/slider-danesh.jpg" alt="Chicago" >
+                                </div>
+
+                            </div>
+
                             <div class="carousel-caption">
-                                <h3>Chicago</h3>
-                                <p>Thank you, Chicago!</p>
+                                <p>معرفی نامه دانش بنیان</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="ny.jpg" alt="New York" width="1100" height="500">
+                            <div class="slider-image">
+                                <div class="side-slider-image">
+                                    <img src="assets/img/slider-rate.jpg" alt="New York" >
+                                </div>
+
+                            </div>
+
                             <div class="carousel-caption">
-                                <h3>New York</h3>
-                                <p>We love the Big Apple!</p>
+                                <p>رتبه بندی شرکت های انفورماتیکی</p>
                             </div>
                         </div>
                     </div>
@@ -644,7 +699,12 @@
 <script src='assets/js/full-page.js'></script>
 <script src="assets/js/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/owl.carousel.min.js"></script>
 <script src="assets/js/javascript.js"></script>
+<script>
+
+
+</script>
 </body>
 </html>
 
