--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <section class="vertical-scrolling">
         <div class="box-activities">
 
-            <div class="container wrap-activities p-0">
+            <div class="container wrap-activities">
                 <div class="activities-app">
                     <div class="activities-slider-first">
                         <div id="carouselactivities" class="carousel slide carousel-fade" data-ride="carousel">
@@ -312,9 +312,15 @@
                                     <div class="activities-item">
                                         <div class="row d-flex justify-content-center align-items-center">
                                             <div class="col-md-5">
-                                                <div class="image-item">
-                                                    <img src="assets/img/system4.png" alt="">
-                                                </div>
+                                               <div class="box-image-item">
+                                                   <div class="image-item-background">
+                                                       <img src="assets/img/eslimi.svg" alt="">
+                                                   </div>
+                                                   <div class="image-item">
+                                                       <img src="assets/img/Galaxy-motahari-1.png" alt="">
+                                                   </div>
+                                               </div>
+
 
                                             </div>
                                             <div class="col-md-7">
@@ -470,14 +476,21 @@
                                 <small class="installation">با ۲۰,۰۰۰ نصب فعال</small>
                             </div>
                                 <div class="image-body-property">
-                                    <img src="assets/img/system4.png" alt="">
+                                    <div class="box-image-item">
+                                        <div class="image-item-background">
+                                            <img src="assets/img/eslimi.svg" alt="">
+                                        </div>
+                                        <div class="image-item">
+                                            <img src="assets/img/Galaxy-motahari-1.png" alt="">
+                                        </div>
+                                    </div>
                                 </div>
                         </div>
                         <div class="col-6">
                             <div class="box-pack-property box-pack-property1">
                                 <div class="pack-property">
                                     <div class="icon-body-property">
-                                        <img src="assets/img/system4.png" alt="">
+                                        <img src="assets/img/open-book.svg" alt="">
                                     </div>
                                     <div class="text-property">
                                         <h6 class="title">کتاب های رایگان</h6>
@@ -488,7 +501,7 @@
                                 </div>
                                 <div class="pack-property">
                                     <div class="icon-body-property">
-                                        <img src="assets/img/system4.png" alt="">
+                                        <img src="assets/img/classroom.svg" alt="">
                                     </div>
                                     <div class="text-property">
                                         <h6 class="title">دوره های آموزشی</h6>
@@ -500,23 +513,25 @@
                                 </div>
                                 <div class="pack-property">
                                     <div class="icon-body-property">
-                                        <img src="assets/img/system4.png" alt="">
+                                        <img src="assets/img/medal.svg" alt="">
                                     </div>
                                     <div class="text-property">
-                                        <h6 class="title">کتاب های رایگان</h6>
-                                        <p class="explain">شما می توانید تمامی کتاب های استاد مطهری
-                                            را به صورت تمام متن و رایگان دانلود کنید.</p>
+                                        <h6 class="title">برگزاری مسابقات</h6>
+                                        <p class="explain">
+                                            در این برنامه مسابقاتی با جوایز ارزنده
+                                            برگزار می شود.
+                                        </p>
                                     </div>
 
                                 </div>
                                 <div class="pack-property">
                                     <div class="icon-body-property">
-                                        <img src="assets/img/system4.png" alt="">
+                                        <img src="assets/img/headphones.svg" alt="">
                                     </div>
                                     <div class="text-property">
-                                        <h6 class="title">دوره های آموزشی</h6>
-                                        <p class="explain">شما می توانید از دوره های آموزش الکترونیکی
-                                            آثار شهید مطهری استفاده کنید.
+                                        <h6 class="title">فایل صوتی</h6>
+                                        <p class="explain">
+                                            شما می توانید فایل های صوتی استاد مطهری را به صورت رایگان انلود و گوش نمایید.
                                         </p>
                                     </div>
 
@@ -540,42 +555,45 @@
                         </div>
                         <h5 class="title">اپلیکیشن استاد مطهری</h5>
                     </div>
-                            <div class="owl-carousel owl-theme owl-rtl">
 
-                                <div class="item">
-                                 <div class="owl-image">
-                                     <img src="assets/img/system4.png" alt="">
-                                 </div>
-                                    <div class="owl-box-text">
-                                        <p class="owl-text">
-                                            مسابقات
-                                        </p>
-                                    </div>
+                    <div class="container" style="padding-right: 13%;padding-left:13%;">
+                        <div class="owl-carousel owl-theme owl-rtl">
+
+                            <div class="item">
+                                <div class="owl-image">
+                                    <img src="assets/img/Galaxy-motahari-1.png" alt="">
                                 </div>
-
-                                <div class="item ">
-                                    <div class="owl-image">
-                                        <img src="assets/img/system4.png" alt="">
-                                    </div>
-                                    <div class="owl-box-text">
-                                        <p class="owl-text">
-                                            کتاب ها
-                                        </p>
-                                    </div>
+                                <div class="owl-box-text">
+                                    <p class="owl-text">
+                                        مسابقات
+                                    </p>
                                 </div>
-                                <div class="item ">
-                                    <div class="owl-image">
-                                        <img src="assets/img/system4.png" alt="">
-                                    </div>
-                                    <div class="owl-box-text">
-                                        <p class="owl-text">
-                                            دوره ها
-                                        </p>
-                                    </div>
-                                </div>
-
-
                             </div>
+
+                            <div class="item ">
+                                <div class="owl-image">
+                                    <img src="assets/img/Galaxy-motahari-2.png" alt="">
+                                </div>
+                                <div class="owl-box-text">
+                                    <p class="owl-text">
+                                        کتاب ها
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="item ">
+                                <div class="owl-image">
+                                    <img src="assets/img/Galaxy-motahari-3.png" alt="">
+                                </div>
+                                <div class="owl-box-text">
+                                    <p class="owl-text">
+                                        دوره ها
+                                    </p>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
                     <div class="wrap-back-button">
                         <button class="back-button">x</button>
                     </div>
@@ -601,16 +619,16 @@
         <div class="box-slider">
             <div class="container wrap-slider">
                 <div id="demo" class="carousel slide" data-ride="carousel">
-                    <ul class="carousel-indicators">
+                   <!-- <ul class="carousel-indicators">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
                         <li data-target="#demo" data-slide-to="1"></li>
                         <li data-target="#demo" data-slide-to="2"></li>
-                    </ul>
+                    </ul>-->
                     <div class="carousel-inner">
                         <div class="carousel-item active" >
                             <div class="slider-image">
                                 <div class="side-slider-image">
-                                    <img src="assets/img/slider-computer.jpg" alt="Los Angeles">
+                                    <img src="assets/img/slider-computer.png" alt="Los Angeles">
                                 </div>
 
                             </div>
@@ -622,7 +640,7 @@
                         <div class="carousel-item">
                             <div class="slider-image">
                                 <div class="side-slider-image">
-                                    <img src="assets/img/slider-danesh.jpg" alt="Chicago" >
+                                    <img src="assets/img/slider-danesh.png" alt="Chicago" >
                                 </div>
 
                             </div>
@@ -634,7 +652,7 @@
                         <div class="carousel-item">
                             <div class="slider-image">
                                 <div class="side-slider-image">
-                                    <img src="assets/img/slider-rate.jpg" alt="New York" >
+                                    <img src="assets/img/slider-rate.png" alt="New York" >
                                 </div>
 
                             </div>
